# hyperion-core

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  package.xml  setup.py
components/: date.yaml  ls.yaml  nav.yaml  roscore.yaml  rviz.yaml  sim.yaml  top.yaml  xclock.yaml  xeyes.yaml
components/groups/: group.yaml  group2.yaml
hyperion/: DepTree.py  __init__.py  hyperGUI.py  hyperion.py  manager.py  manager_tests.py  runner.py
hyperion/data/: default-logger.config
hyperion/lib/monitoring/: threads.py
hyperion/lib/networking/: clientInterface.py  server.py
hyperion/lib/util/: actionSerializer.py  config.py  depTree.py  events.py  exception.py  graph_generator.py  setupParser.py  types.py  util_tests.py
hyperion/scripts/: show_session.sh  show_term.sh  start_named_clone_session.sh
hyperion/user_interfaces/: hyperGUI.py  interactiveCLI.py
systems/: demo.yaml
systems/env/: custom_env.sh
